DMP-2362 address minor code smells picked up by sonarqube